# advent-of-code-24

./: pyproject.toml
01/: 01a.py  01b.py
02/: 02a.py
