[tool.poetry]
name = "advent-of-code-24"
version = "0.1.0"
description = ""
authors = ["Federico Frontini <federico.frontini@lantechlongwave.it>"]
readme = "README.md"
packages = [{include = "advent_of_code_24"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
